# Market-App

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Plan_Rozwoju_Systemu_Tradingowego_2.md  README.md
.github/workflows/: build-images.yml  ci.yml  deploy.yml
docs/: PROJECT_STATUS.md  framework_supplement.md  git-workflow-guide.md  ml_integration_plan.md
infrastructure/: docker-compose.prod.yml  docker-compose.yml  init-db.sql
infrastructure/helm/: Chart.yaml  values-prod.yaml  values.yaml
infrastructure/k8s/: namespace.yaml  secrets.yaml.example
scripts/: bootstrap-universe.py  run-all-tests.sh  seed-data.sh  setup-dev.sh  verify-jetstream.py
services/strategy/: Dockerfile  pyproject.toml
services/strategy/src/: config.py  main.py
services/strategy/src/api/: __init__.py  deps.py  routes.py
services/strategy/src/core/: adaptive_weights.py  cost_filter.py  decay_monitor.py  feature_client.py  health.py  momentum.py  portfolio_client.py  service.py
services/strategy/src/events/: publisher.py  subscriber.py
services/strategy/tests/: conftest.py  test_adaptive_weights.py  test_cost_filter.py  test_decay_monitor.py  test_health.py  test_momentum.py  test_publisher.py  test_revalidation.py  test_routes.py  test_service.py
shared/trading-common/: pyproject.toml
shared/trading-common/src/trading_common/: __init__.py  constants.py  cost_filter.py  events.py  features.py  ranking.py  risk_envelope.py  scheduler.py  schemas.py  utils.py
shared/trading-common/tests/: test_cost_filter.py  test_events.py  test_features.py  test_ranking.py  test_risk_envelope.py  test_scheduler.py  test_schemas.py  test_utils.py
(+277 files in other folders)
