[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strategy-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "trading-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.1",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "nats-py>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
